# social-insights

./: .env  .gitignore  .last_ingest.txt  Makefile  Taskfile.yml  cleanup_data.py  ingest.sh  pyproject.toml
api/: main.py  requirements.txt
data/: models.py
data/bronze/: processor.py
data/gold/: process.py
data/ingestion/: main.py  run.py
data/ingestion/config/: companies.yaml
data/ingestion/sources/: reddit.py  twitter.py
data/ingestion/utils/: db.py  great_expectations.py  text_cleaning.py
data/scripts/: unity_catalog_setup.sql
data/silver/: process.py  process_enhanced.py  processor.py
dev/: docker-compose.yaml
